<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.lab42.skillsclub.presentation.mvvm.home.HomeContainerFragment"
        android:label="@string/title_home"
        tools:layout="@layout/content_home" />

    <fragment
        android:id="@+id/navigation_dictionary"
        android:name="com.lab42.skillsclub.presentation.mvvm.dictionary.DictionaryContainerFragment"
        android:label="@string/title_dictionary"
        tools:layout="@layout/content_dictionary"/>

<!--    <include app:graph="@navigation/nav_profile" />-->
    <fragment
        android:id="@+id/helpFragment"
        android:name="com.lab42.skillsclub.presentation.mvvm.help.HelpFragment"
        android:label="fragment_help"
        tools:layout="@layout/fragment_help" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.lab42.skillsclub.presentation.mvvm.profile.ProfileContainerFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/content_profile"/>



</navigation>