<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/sh_frame_dialog"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:paddingBottom="20dp">

    <FrameLayout
        android:id="@+id/skipTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deactivation_res"
            android:gravity="center"
            android:padding="20dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/dn_text"/>

        <ImageButton
            android:id="@+id/closeButtonDeactivation"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:src="@drawable/baseline_cancel"
            android:padding="15dp"
            android:layout_gravity="end"/>
    </FrameLayout>


    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingHorizontal="35dp"
        android:text="@string/deactivation_description"
        android:textColor="@color/gray_blocked"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/skipTitle" />


    <Button
        android:id="@+id/btn_skip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:background="@drawable/sh_blue_btn_dialog"
        android:gravity="center"
        android:text="@string/send_request"
        android:textAllCaps="false"
        android:layout_marginHorizontal="15dp"
        android:textColor="#FFFFFF"
        android:textSize="13sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

<!--    <Button-->
<!--        android:id="@+id/btn_enter_pass_back"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@android:color/transparent"-->
<!--        android:gravity="center"-->
<!--        android:text="@string/back"-->
<!--        android:textAllCaps="false"-->
<!--        android:textColor="@color/purple"-->
<!--        android:textSize="14sp"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/btn_deactivation_req" />-->

</androidx.constraintlayout.widget.ConstraintLayout>
