<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/sh_frame_position"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp">

    <FrameLayout
        android:id="@+id/skipTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/application_theme"
            android:gravity="center"
            android:padding="20dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/dn_text"/>

        <ImageButton
            android:id="@+id/closeButtonTheme"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:src="@drawable/baseline_cancel"
            android:padding="15dp"
            android:layout_gravity="end"/>
    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:paddingHorizontal="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/skipTitle"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:id="@+id/lightTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/sh_frame_theme_ic"
            android:padding="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/image_light_theme" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/light"
                android:textColor="@color/dn_text"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/darkTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/sh_frame_theme_ic"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/autoTheme"
            app:layout_constraintStart_toEndOf="@+id/lightTheme"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/image_dark_theme" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/dark"
                android:textColor="@color/dn_text"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/autoTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/sh_frame_theme_ic"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/image_auto_theme" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/system"
                android:textColor="@color/dn_text"
                android:textSize="14sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
