<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/dn_background_main"
    tools:context=".presentation.mvvm.profile.ProfileFragment">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/changePosBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/sh_frame_btn"
        android:padding="15dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_profile1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/change_position"
            android:textColor="@color/dn_text"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/imageView1"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/changeTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/sh_frame_btn"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@+id/changePosBtn"
        tools:layout_editor_absoluteX="20dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_profile2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/application_theme"
            android:textColor="@color/dn_text"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/currentTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="System"
            android:textColor="@color/gray_blocked"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/updatePass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/sh_frame_btn"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/changeTheme"
        tools:layout_editor_absoluteX="20dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_profile3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/change_password"
            android:textColor="@color/dn_text"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/deactivationReq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/sh_frame_btn"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@+id/updatePass"
        tools:layout_editor_absoluteX="20dp">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_profile4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/account_deactivation_request"
            android:textColor="@color/dn_text"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>

<!--    <TextView-->
<!--        android:id="@+id/textView12"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:paddingVertical="20dp"-->
<!--        android:paddingLeft="20dp"-->
<!--        android:paddingRight="5dp"-->
<!--        android:text="Time: "-->
<!--        android:textSize="20sp"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/deactivationReq" />-->

<!--    <TextView-->
<!--        android:id="@+id/time"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:paddingVertical="20dp"-->
<!--        android:paddingRight="5dp"-->
<!--        android:text="0"-->
<!--        android:textSize="20sp"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintStart_toEndOf="@+id/textView12"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/deactivationReq" />-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/logoutContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp"
        android:paddingLeft="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/logoutIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/logoutText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textColor="@color/blue_corner"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@id/logoutIcon"
            app:layout_constraintTop_toTopOf="@id/logoutIcon"
            app:layout_constraintBottom_toBottomOf="@id/logoutIcon"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>